# wizard-wars

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  Settings.txt  config.hpp  file  game  game.cpp  local_config.default.hpp  main.cpp  makefile  move  move(to_include).cpp  spells_reference.txt
headers/: Beam.hpp  Button.hpp  Camera.hpp  Client.hpp  Controlpoint.hpp  DZone.hpp  DealingB.hpp  ElementPicker.hpp  FirePellet.hpp  FireShield.hpp  FireSpray.hpp  FogZone.hpp  FreezeZone.hpp  Gamestatus.hpp  HUDobject.hpp  HealB.hpp  HealFireZone.hpp  HealP.hpp  HealZone.hpp  Ice.hpp  Interface.hpp  MainShield.hpp  Map.hpp  MapObject.hpp  Minimap.hpp  Player.hpp  Projectile.hpp  Rock.hpp  RockShield.hpp  Server.hpp  Shield.hpp  Spell.hpp  Spells.hpp  Spray.hpp  WaterB.hpp  WaterShield.hpp  WaterSpray.hpp  Zone.hpp
mihails-allegro/: game.cpp  game2.cpp  makefile
networking/: Client.cpp  Client.hpp  Encode.cpp  Interface.cpp  Interface.hpp  Server.cpp  Server.hpp  async_client.cpp  async_client.hpp  async_server.cpp  async_server.hpp  client  makefile  message.hpp  server  server2  udp_server.cpp  udp_server.hpp
objects/: placeholder.txt
resources/: .Exit.bmp.icloud  .Settings.bmp.icloud  .Start.bmp.icloud  .background.bmp.icloud  .map.bmp.icloud  .old_map.bmp.icloud  .old_new_map.bmp.icloud  placeholder.txt
source/: App.cpp  App.h  Beam.cpp  Button.cpp  Camera.cpp  Client.cpp  Controlpoint.cpp  DZone.cpp  DealingB.cpp  ElementPicker.cpp  FirePellat.cpp  FirePellet.cpp  FireShield.cpp  FireSpray.cpp  FogZone.cpp  FreezeZone.cpp  Gamestatus.cpp  HUDobject.cpp  (+27 more)
